Change range implementation; Make more syntax updates